--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ Flask==3.0.0
 flask-cors==4.0.0
 gunicorn==21.2.0
 numpy==1.24.3
-matplotlib==3.7.2
-git+https://github.com/google-deepmind/alphagenome.git
+# AlphaGenome installation commented out for initial deployment
+# Uncomment after resolving package size issues
+# matplotlib==3.7.2
+# git+https://github.com/google-deepmind/alphagenome.git
