Fix Render deployment configuration
- Update Python runtime to 3.11
- Add build script for debugging
- Change runtime to env in render.yaml
- Simplify build process

--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
     name: alphagenome-backend
-    runtime: python
-    buildCommand: "pip install --upgrade pip && pip install -r requirements.txt"
-    startCommand: "gunicorn app:app --bind 0.0.0.0:$PORT"
+    env: python
+    buildCommand: "./build.sh"
+    startCommand: "gunicorn app:app"
     envVars:
       - key: ALPHAGENOME_API_KEY
         value: AIzaSyAd8VEbbDBGpQoPGK4v8LZzdaGlgBh2kaE
